# slateos

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
.superpowers/brainstorm/18313-1774217883/: .server-info  lock-layout.html
config/nftables/: slate-firewall.conf
config/niri/: config.kdl  palette.kdl
config/niri/devices/: generic-x86.kdl  pinebook-pro.kdl  pinephone-pro.kdl  pinetab-2.kdl  pixel-tablet.kdl
config/sysctl/: 99-slate-hardening.conf
config/waybar/: config.jsonc  style.css
config/waybar/devices/: generic-x86.jsonc  pixel-tablet.jsonc
config/waybar/scripts/: netspeed.sh  reload-waybar.sh
config/wvkbd/: build.sh  config.slate.h  layout.slate.h
docs/: ARCHITECTURE.md  BUILDING.md  DEVICES.md  PRONOIA.md
docs/superpowers/plans/: 2026-03-22-lock-screen-plan.md  2026-03-22-rhea-and-notifications-plan.md  2026-03-22-wiring-and-polish-plan.md
docs/superpowers/specs/: 2026-03-22-lock-screen-design.md  2026-03-22-rhea-and-notifications-design.md  2026-03-22-wiring-and-polish-design.md
services/base/claw-panel/: depends  run  sandbox
services/base/dbus-session/: depends  ready-check  run  sandbox
services/base/dbus-system/: ready  run  sandbox
services/base/network-online/: run
services/base/networkmanager/: run  sandbox
services/base/niri/: depends  ready  ready-check  run
services/base/niri/env/: MESA_SHADER_CACHE_DIR
services/base/openclaw/: depends  run  sandbox
services/base/openclaw/env/: OPENCLAW_HOME
services/base/pipewire/: sandbox
services/base/rhea/: run
services/base/seatd/: ready  ready-check  run
services/base/shoal/: run  sandbox
services/base/slate-launcher/: run  sandbox
services/base/slate-launcher/env/: XDG_RUNTIME_DIR
services/base/slate-lock/: depends  run
services/base/slate-notifyd/: run
services/base/slate-palette/: run  sandbox
services/base/slate-settings/: run  sandbox
services/base/slate-shade/: depends  run
services/base/slate-suggest/: depends  run  sandbox
services/base/slate-welcome/: run
services/base/swaybg/: run  sandbox
services/base/touchflow/: run
services/base/waybar/: run  sandbox
services/base/waybar/env/: DBUS_SESSION_BUS_ADDRESS  WAYLAND_DISPLAY
services/base/wireplumber/: run  sandbox
services/base/wvkbd/: run
services/devices/onn-tablet/slate-hwsetup/: run  sandbox
services/devices/onn-tablet/slate-modules/: run
services/devices/onn-tablet/slate-power/: depends  run
shell/claw-panel/: Cargo.toml
shell/claw-panel/src/: clipboard.rs  context.rs  conversation.rs  dbus_listener.rs  main.rs  openclaw.rs  panel.rs  rhea_client.rs  tests.rs  toast.rs
shell/rhea/: Cargo.toml
shell/rhea/src/: cloud.rs  config.rs  context.rs  dbus.rs  local.rs  local_tests.rs  main.rs  router.rs
shell/shoal/: Cargo.toml
shell/shoal/src/: actions.rs  context_menu.rs  dbus_listener.rs  desktop.rs  dock.rs  magnification.rs  main.rs  windows.rs
shell/slate-common/: Cargo.toml
shell/slate-common/src/: ai.rs  dbus.rs  icons.rs  layout.rs  lib.rs  notifications.rs  palette.rs  physics.rs  settings.rs  system.rs  theme.rs  toast.rs
shell/slate-launcher/: Cargo.toml
shell/slate-launcher/src/: apps.rs  dbus_listener.rs  feedback.rs  grid.rs  launcher.rs  main.rs  recent.rs  search.rs  view.rs
shell/slate-lock/: Cargo.toml
shell/slate-lock/src/: auth.rs  clock.rs  dbus.rs  main.rs  notifications.rs  pin_pad.rs
shell/slate-notifyd/: Cargo.toml
shell/slate-notifyd/src/: dbus.rs  error.rs  grouping.rs  history.rs  main.rs  sound.rs  store.rs
shell/slate-notifyd/src/dbus/: freedesktop.rs  mod.rs  slate.rs
shell/slate-palette/: Cargo.toml
shell/slate-palette/src/: broadcast.rs  builtin_extract.rs  extractor.rs  main.rs  output.rs  reload.rs  watcher.rs
shell/slate-power/: Cargo.toml
shell/slate-power/src/: main.rs
shell/slate-settings/: Cargo.toml
shell/slate-settings/src/: main.rs  navigation.rs  notifier.rs  settings_io.rs
shell/slate-settings/src/pages/: about.rs  ai.rs  display.rs  dock.rs  fex.rs  gestures.rs  keyboard.rs  mod.rs  network.rs  notifications.rs  security.rs  wallpaper.rs
shell/slate-shade/: Cargo.toml
shell/slate-shade/src/: actions.rs  dbus_listener.rs  heads_up.rs  layout.rs  main.rs  main_tests.rs  notifications.rs  notifications_tests.rs  quick_settings.rs  shade.rs  style.rs  update.rs
shell/slate-suggest/: Cargo.toml
shell/slate-suggest/src/: bar.rs  dbus_listener.rs  engine.rs  history.rs  inject.rs  llm.rs  main.rs
shell/slate-welcome/: Cargo.toml
shell/slate-welcome/src/: main.rs  steps.rs
shell/touchflow/: Cargo.toml
shell/touchflow/src/: config.rs  dbus_emitter.rs  dispatch.rs  dispatch_tests.rs  edge.rs  gesture.rs  gesture_tests.rs  input.rs  main.rs  niri_ipc.rs  physics.rs
tests/: run-integration.sh  setup-skytale.sh
tests/integration/: Cargo.toml
tests/integration/src/: cross_daemon.rs  harness.rs  lib.rs  notifyd.rs  rhea.rs
tools/slate/: Cargo.toml
tools/slate/src/: build.rs  check.rs  config.rs  cross.rs  dev.rs  device.rs  flash.rs  info.rs  init.rs  main.rs  services.rs  status.rs  workspace.rs
