[package]
name = "claw-panel"
version = "0.1.0"
edition = "2021"

[dependencies]
slate-common = { path = "../slate-common" }
iced = { workspace = true, features = ["tokio"] }
iced_anim = { workspace = true }
tokio = { workspace = true }
zbus = { workspace = true }
reqwest = { workspace = true }
tokio-tungstenite = { workspace = true }
serde = { workspace = true }
serde_json = "1"
futures-util = "0.3"
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
iced_layershell = { workspace = true }
