[package]
name = "rhea"
version = "0.1.0"
edition = "2021"
description = "Rhea AI engine daemon — routes AI requests to configured backends"

[[bin]]
name = "rhea"
path = "src/main.rs"

[dependencies]
slate-common = { path = "../slate-common" }
zbus = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
serde_json = "1"
async-trait = "0.1"

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros", "time"] }
