[package]
name = "slate-common"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
zbus = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
iced = { workspace = true }
async-trait = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
