[package]
name = "slate-launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
slate-common = { path = "../slate-common" }
iced = { workspace = true }
iced_anim = { workspace = true }
tokio = { workspace = true }
zbus = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
iced_layershell = { workspace = true }
