[package]
name = "slate-power"
version = "0.1.0"
edition = "2021"
description = "Power button monitor for Slate OS — suspend on short press, poweroff on long press"

[[bin]]
name = "slate-power-monitor"
path = "src/main.rs"

[dependencies]
libc = "0.2"
zbus = { workspace = true }
slate-common = { path = "../slate-common" }
toml = { workspace = true }
serde = { workspace = true }
