[package]
name = "slate-settings"
version = "0.1.0"
edition = "2021"

[dependencies]
slate-common = { path = "../slate-common" }
iced = { workspace = true, features = ["tokio"] }
tokio = { workspace = true }
zbus = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
anyhow = { workspace = true }
nix = { workspace = true }
