[package]
name = "slate-suggest"
version = "0.1.0"
edition = "2021"

[dependencies]
slate-common = { path = "../slate-common" }
iced = { workspace = true }
tokio = { workspace = true }
zbus = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
futures-util = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
iced_layershell = { workspace = true }
