[package]
name = "touchflow"
version = "0.1.0"
edition = "2021"

[features]
default = []
# Enable pressure-sensitive touch tracking. Currently unused; will be needed
# when force-touch gestures are implemented.
pressure = []

[dependencies]
slate-common = { path = "../slate-common" }
evdev = { workspace = true }
tokio = { workspace = true }
zbus = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
